--- a/ComputerRoommate/ComputerRoommate/Base.lproj/Main.storyboard
+++ b/ComputerRoommate/ComputerRoommate/Base.lproj/Main.storyboard
@@ -682,11 +682,6 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="1095" height="719"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
-                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -723,36 +718,43 @@
                             </button>
                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wfz-aP-KbF">
                                 <rect key="frame" x="38" y="37" width="313" height="121"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="&quot;i'm a 26 y/o chick who luvs circus arts and yogis and DUBSTEP. must be 420 friendly, yo!&quot;" id="mzp-mo-sQw">
+                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="mzp-mo-sQw">
                                     <font key="font" size="16" name="Georgia-Italic"/>
+                                    <string key="title">"i'm a 26 y/o yogi/dubstep dj/pro lyft driver looking for HELLA CHILL new roomie. must be 🍁420🍁 friendly, yo! boyz or girlz ok, no petz. ~goddess bless~"</string>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8MU-h4-ei4">
                                 <rect key="frame" x="721" y="37" width="333" height="120"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="kuu-6X-vyx">
-                                    <font key="font" metaFont="system"/>
+                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="kuu-6X-vyx">
+                                    <font key="font" size="16" name="Georgia-Italic"/>
+                                    <string key="title">"39/M old soul seeking new friends ;). Open to new lifestyles and experiences, male/female/trans/anything. Life is joy and life is pain, so pain is joy! No pets."</string>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wt8-I0-kx3">
                                 <rect key="frame" x="724" y="195" width="329" height="423"/>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Q7b-Vd-gz3">
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="roommatePicker-creepy" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Q7b-Vd-gz3">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                             </button>
                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H4A-Fn-oFX">
                                 <rect key="frame" x="369" y="37" width="338" height="120"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="Lwp-Ri-Wk2">
-                                    <font key="font" metaFont="system"/>
+                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="&quot;28/M pediatric intern seeking clean accommodations and responsible roommate. Quiet time a must. Men only. No pets.&quot;" id="Lwp-Ri-Wk2">
+                                    <font key="font" size="16" name="Georgia-Italic"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                         </subviews>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -761,6 +763,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="roommatePicker-creepy" width="1066.800048828125" height="1324.800048828125"/>
         <image name="roommatePicker-stoner" width="601" height="720"/>
         <image name="rooommatePicker-neat" width="377" height="428"/>
     </resources>
